Responsiveness fixed on homepage and advice page
Text no longer overlaps in navbar elements. Homepage renamed to 'introduction'. FoD and homepage video now behave responsively without overlap (the staggered design is intentional). Also altered advice tabs so they are larger in mobile form (for clumsy thumbs).

--- a/CI432_group_project/CI432_group_project/css/main.css
+++ b/CI432_group_project/CI432_group_project/css/main.css
@@ -12,7 +12,7 @@
 html, body{
 	margin: 0 auto;
 	padding: 0;
-	font-size:1vw;
+	font-size: 16px;
 	font-family: 'Bubblegum Sans', cursive;
 	background-color:#336666;
 	height:100%;
@@ -120,6 +120,7 @@ nav{
 	padding:1%;
 	border-radius:1em;
 	width: 8%;
+	/*word-wrap: break-word;*/
 }
 
 .navbar ul li a:hover{
@@ -129,6 +130,7 @@ nav{
 .navbar ul li:nth-child(1){
 	background-color:#339999;
 	margin-top:1%;
+	padding-right: 3%;
 }
 
 .navbar ul li:nth-child(2){
@@ -138,7 +140,7 @@ nav{
 
 .navbar ul li:nth-child(3){
 	background-color:#653399;
-	margin-top:3%;
+	margin-top:2%;
 }
 
 .navbar ul li:nth-child(4){
@@ -210,17 +212,18 @@ header{
 }
 
 .tab button{
+	background-color:#FF3333;
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
 	float: left;
 	cursor: pointer;
 	position: relative;
-	height: 35px;
+	height: 2em;
 	top: 0;
 	transition: top ease 0.5s;
 	border:1px solid #282828;
 	font-family: 'Bubblegum Sans', cursive;
-	font-size:1.4em;
+	font-size: 1.5em;
 	text-align:center;
 	align-items:middle;
 }
@@ -245,25 +248,6 @@ header{
 	display: block;
 }
 
-.tab button:nth-child(1){
-	background-color:#FF3333;
-}
-
-.tab button:nth-child(2){
-	background-color:#FF3333;;
-}
-
-.tab button:nth-child(3){
-	background-color:#FF3333;
-}
-
-.tab button:nth-child(4){
-	background-color:#FF3333;
-}
-
-.tab button:nth-child(5){
-	background-color:#FF3333;
-}
 
 /* news */
 
@@ -271,19 +255,8 @@ header{
 	padding:2%;
 }
 
-<<<<<<< HEAD
-
-/*let the 1st post be displayed by default*/
-#ad_post_01{
-	display: block;
-}
 
 
-
-
-
-=======
->>>>>>> cf7090f28816819cb0d2bbf3a68027cc5c0c7a36
 /*text content, e.g. articles*/
 
 
@@ -323,6 +296,7 @@ img.center {
 
 .content-wrapper{
 	grid-column:1/4;
+	grid-gap: 2.5%;
 	text-align:center;	
 }
 
@@ -364,22 +338,24 @@ iframe {
 
 #home_vid1{
 	grid-column:1/2;
+	grid-row: 1/2; 
 	position:relative;
-	display:inline;
+	display:inline-block;
 	padding:0;
-	margin-top:5%;
+	margin:5%;
 	left:16%;
 }
 
 #homeFOD{
-	grid-column:2/4;
+	grid-column:2/2;
+	grid-row: 1/2;
 	position:relative;
 	border:2px solid #282828;
 	background-color: #66CC66;
 	text-align:center;
-	width:50%;
-	left:35%;
-	top:4%;
+	width:30vw;
+	left: 20%;
+	top: 0%;
 	
 }
 
@@ -604,6 +580,15 @@ body{
 	font-size:1em;
 }
 
+.navbar ul li:nth-child(1){
+	padding-right: 6%;
+}
+
+
+.navbar ul li:nth-child(6){
+	padding-right: 3%;
+}
+
 .mobile{
 	display:none;
 }
@@ -621,24 +606,21 @@ body{
 }
 
 #home_vid{
+	grid-row: 1/4;
+	margin: 20%;
 	display:block;
 	width:160%;
 	height:100%;
 }
 
-#home_vid1{
-	display:block;
-	padding:0;
-	margin-top:5%;
-
-}
 
 #homeFOD{
-	display:block;
-	position:relative;
-	left:45%;
-	top:2%;
-	margin:0;
+	grid-row: 3/4;
+	grid-column: 1/4;
+	width: 50%;
+	/*left: -1%;*/
+	top:0;
+	margin:0 auto;
 }
 
 #homeFOD p{
@@ -647,6 +629,18 @@ body{
 
 #homeFOD h2{
 	font-size:2em;
+}
+
+#citizensCont{
+	grid-row: 4/4;
+	margin: 0 auto;
+	left:-4%;
+	padding:0;
+
+}
+
+#citizens{
+	max-width:90%;
 }
 
 #cookie_text{
@@ -723,8 +717,8 @@ main{
 }
 
 .tab button{
-
-	font-size:1.6em;
+	height: 3em;
+	font-size:2em;
 
 }
 
@@ -790,14 +784,9 @@ article{
 }
 
 #citizensCont{
-	margin:0 auto;
-	left:4.6%;
-	padding:0;
+	margin-bottom: 5%;
+	left: 3.5%;
 
-}
-
-#citizens{
-	max-width:90%;
 }
 
 #theftCont{
